--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
      <style>
          p {
              color:red;
-         {
+             background=colour:tan55; 
+         }
      </style>
    </head>
 
