--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <style>
          p {
              color:red;
-             background=colour:tan55; 
+             background=colour:tan; 
          }
      </style>
    </head>
