--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
       <table class="table2">
         <tr>
           <td>Nama :</td>
-          <td>Nur Faris Diyana Binti Kamarudin</td>
+          <td>Zuraikha Baharum</td>
         </tr>
         <tr>
           <td>Cita-cita :</td>
-          <td>Psychologist</td>
+          <td>Doktor</td>
         </tr>
         <tr>
           <td>Hobi :</td>
-          <td>Menonton filem</td>
+          <td>menari</td>
         </tr>
         <tr>
           <td>Asal</td>
